--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel": "^2.7.0"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0"
+    "bootstrap": "^5.2.0",
+    "caniuse-lite": "^1.0.30001450"
   }
 }
