--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taseofafrica",
+  "name": "tasteofafrica",
   "version": "1.0.0",
   "description": "This is a student project",
   "scripts": {
@@ -10,7 +10,7 @@
   "author": "DCI Students : yassine.k & moses.U.A & rodrigue.T",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.7.0", 
+    "@parcel/transformer-sass": "^2.7.0",
     "gh-pages": "^4.0.0",
     "parcel": "^2.7.0"
   },
